--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   },
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
-    "govuk-frontend": "5.3.0",
-    "govuk-prototype-kit": "13.16.2",
-    "hmrc-frontend": "^6.15.0"
+    "govuk-frontend": "^5.12.0",
+    "govuk-prototype-kit": "13.18.1",
+    "hmrc-frontend": "^6.97.0"
   }
 }
